<resources>
    <string name="app_name">SPGVolunteer</string>
    <string name="username">username</string>
    <string name="password">password</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!--登入-->
    <string name="login">login</string>

    <!--底部導航列-->
    <string name="navigation_home">Home</string>
    <string name="navigation_add">Add</string>
    <string name="navigation_account">Account</string>

    <!--投票Item-->
    <string name="vote_multiply">Multiply</string>
    <string name="vote_sign">Sign</string>
    <string name="new_option">Add Option</string>

    <!--投票-->
    <string name="vote_error_multiply">Select up to {multiply} item</string>
    <string name="vote_success">Success</string>
    <string name="vote">Vote</string>

    <!--新增/更新投票-->
    <string name="append_vote_title">Title</string>
    <string name="append_vote_description">Description</string>
    <string name="append_vote_option">Option</string>
    <string name="append_vote_add_option">+ Add Option</string>
    <string name="append_vote_is_allow_add">Allow Add Option</string>
    <string name="append_vote_open_voting">Open Voting</string>
    <string name="append_vote_sign">Sign</string>
    <string name="append_vote_multiply">Multiply</string>
    <string name="append_vote_option_hint">Please input option</string>
    <string name="append_vote_confirm">Create</string>
    <string name="update_vote_update">Update</string>

    <!--帳戶-->
    <string name="account_personal">Personal Information</string>
    <string name="account_vote_record">Vote Record</string>
    <string name="account_authority">Authority Management</string>
    <string name="account_credential">Orange Paperwork</string>
    <string name="account_logout">Logout</string>
    <string name="account_version">Ver.{version}</string>

    <!--個人資料-->
    <string name="personal_orangeId">Orange ID</string>
    <string name="personal_name">Name</string>
    <string name="personal_nickname">Nickname</string>
    <string name="personal_school">School</string>
    <string name="personal_major">Major</string>
    <string name="personal_password">Password</string>
    <string name="personal_update">Update Info</string>

    <!--登出Dialog-->
    <string name="logout_title">Logout</string>
    <string name="logout_content">你確定要登出了嗎?</string>

    <!--投票紀錄-->
    <string name="vote_record_my_vote">My Vote</string>
    <string name="vote_record_my_voted">Voted</string>

    <!--椪柑證-->
    <string name="orange_credentials_title_zh" translatable="false">小椪柑志工服務隊</string>
    <string name="orange_credentials_title_eng" translatable="false">SPG Volunteer</string>
    <string name="orange_credentials_orange_id">OrangeID : </string>
    <string name="orange_credentials_name">Name : </string>
    <string name="orange_credentials_school">School : </string>
    <string name="orange_credentials_major">Major : </string>
    <string name="orange_credentials_identity">Identity : </string>
    <string name="orange_credentials_graduation">Graduation : </string>

    <!--權限管理-->
    <string name="authority_team">Join Team</string>

    <!--加入團隊-->
    <string name="add_team_passcode_hint">Team Pass Code</string>

    <!--椪柑證身分-->
    <string name="orange_identity_admin">SPG</string>
    <string name="orange_identity_captain">Captain</string>
    <string name="orange_identity_captain2">Vice Captain</string>
    <string name="orange_identity_member1">Member</string>
    <string name="orange_identity_member2">Member</string>
    <string name="orange_identity_member3">Member</string>
    <string name="orange_identity_member4">Member</string>
    <string name="orange_identity_member_old">Adviser</string>

</resources>
