<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_centerInParent="true">

            <EditText
                android:id="@+id/et_username"
                android:hint="@string/username"
                style="@style/ThemeEditText"/>

            <EditText
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:hint="@string/password"
                style="@style/ThemeEditText"/>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="114dp"
                android:layout_height="40dp"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:background="@drawable/style_button_radius_theme"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="17dp"/>

        </LinearLayout>

</RelativeLayout>