<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_default">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bt_personal_update">

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_small"
            android:weightSum="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_weight="0"
                android:text="@string/personal_orangeId"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_default" />

            <EditText
                android:id="@+id/et_personal_orangeid"
                style="@style/ThemeEditText"
                android:layout_weight="1"
                android:enabled="false"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_small"
            android:weightSum="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_weight="0"
                android:text="@string/username"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_default" />

            <EditText
                android:id="@+id/et_personal_username"
                style="@style/ThemeEditText"
                android:layout_weight="1"
                android:enabled="false"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_small"
            android:weightSum="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_weight="0"
                android:text="@string/personal_name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_default" />

            <EditText
                android:id="@+id/et_personal_name"
                style="@style/ThemeEditText"
                android:layout_weight="1"
                android:enabled="false"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_small"
            android:weightSum="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_weight="0"
                android:text="@string/personal_nickname"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_default" />

            <EditText
                android:id="@+id/et_personal_nickname"
                style="@style/ThemeEditText"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_small"
            android:weightSum="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_weight="0"
                android:text="@string/personal_school"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_default" />

            <EditText
                android:id="@+id/et_personal_school"
                style="@style/ThemeEditText"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_small"
            android:weightSum="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_weight="0"
                android:text="@string/personal_major"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_default" />

            <EditText
                android:id="@+id/et_personal_major"
                style="@style/ThemeEditText"
                android:layout_weight="1"/>

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/bt_personal_update"
        style="@style/ThemeButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/personal_update"
        android:paddingStart="@dimen/theme_button_padding"
        android:paddingEnd="@dimen/theme_button_padding"/>


</RelativeLayout>