<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_large">

    <TextView
        android:id="@+id/tv_orange_credentials_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orange_credentials_title_zh"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tv_orange_credentials_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orange_credentials_title_eng"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_orange_credentials_title"
        android:layout_marginBottom="@dimen/margin_default"/>

    <ImageView
        android:id="@+id/iv_orange_credentials_avatar"
        android:layout_width="170dp"
        android:layout_height="160dp"
        android:layout_below="@id/rl_orange_credentials_name"
        android:src="@drawable/avatar"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"/>


    <GridLayout
        android:id="@+id/rl_orange_credentials_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_orange_credentials_title2"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_large">

        <TextView
            android:id="@+id/tv_orange_credentials_identity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="顧問"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textsize_default"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_gravity="center"
            android:layout_row="0"
            android:layout_column="0"/>

        <TextView
            android:id="@+id/tv_orange_credentials_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="蔡勝豐"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textsize_large"
            android:layout_row="0"
            android:layout_column="1"/>

        <TextView
            android:id="@+id/tv_orange_credentials_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="鳥豐"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textsize_min"
            android:layout_row="1"
            android:layout_column="1"/>
    </GridLayout>


    <LinearLayout
        android:id="@+id/ll_orange_credentials_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/rl_orange_credentials_name"
        android:layout_toEndOf="@id/iv_orange_credentials_avatar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_default">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange_credentials_orange_id"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_large"/>

            <TextView
                android:id="@+id/tv_orange_credentials_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20200408005"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_large"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_default">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange_credentials_school"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_large"/>

            <TextView
                android:id="@+id/tv_orange_credentials_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="銘傳大學"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_large"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_default">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange_credentials_major"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_large"/>

            <TextView
                android:id="@+id/tv_orange_credentials_major"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="資訊工程學系"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_large"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_default">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange_credentials_graduation"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_large"/>

            <TextView
                android:id="@+id/tv_orange_credentials_graduation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_large"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>